[1.1] Carousel Align fix and button fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -158,10 +158,10 @@
 
 	/* SEARCHBAR INPUT */
 	.searchbar-input {
-		@apply flex-1 min-w-[200px] w-full p-3 border border-gray-300 rounded-lg shadow-xs text-base text-gray-500 focus:outline-none;
+		@apply flex-1 min-w-[200px] grow w-full p-3 border border-gray-300 rounded-lg shadow-xs text-base text-gray-500 focus:outline-none;
 	}
 
 	.searchbar-btn {
-		@apply bg-gray-900 border border-gray-900 rounded-lg shadow-xs px-5 py-3 text-white text-base font-semibold hover:opacity-90 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-40;
+		@apply bg-gray-900 border w-full sm:w-[100px] border-gray-900 rounded-lg shadow-xs flex items-center justify-center py-3 text-white text-base font-semibold hover:opacity-90 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-40;
 	}
 }
